		getPasswordsArraylist().set(userIndex, newPassword);
	}
- Now when a user goes to edit their profile, and they select the option to update their password.  They will now be able to actually update 
their password.  



#4
	//just added - not specified in the uml
	private int countOfAllTeams = 0;
	public int getCountOfAllTeams() {
		return this.countOfAllTeams;
	}
	
	
#5
Added an Arg's constructor to the Team class.  This will yield the depicted bi-directional relationship between the Team and Coach class.  



#6  Added the following method so the Roster class.
The problem was that a coach could add a player, but by doing so the coach could only see that the roster count increment. so that can access the individual player fields
-Solution: I added the below method so that when a coach adds a player to his or her roster, they can also now access that players information
	/**
	 * just created 10-27
	 * @return the roster
	 */
	public Player[] getPlayersOnRoster() {

		Player[] arr = new Player[roster.size()];
		Iterator<Player> iterator = roster.iterator();
		int counterr = 0;
		while(iterator.hasNext()) {
			arr[counterr] = iterator.next();
			counterr++;
		}

		return arr;
	}


---If You Need to Make Any changes, place your notes & remarks below ---------



#7 Added new class called Notifications to the Models
#8 Created a Inbox Class
#9 The Player class will have a new field called inbox



---after first email----

#10  added the below methods to the coaches class
	private boolean hasTeam = false;
	public boolean getHasTeam() {
		
		if (getTeam().getName() == null) {
			hasTeam = false;
		} else {
			hasTeam = true;
		}
		
		return hasTeam;
	}
	public void setHasTeam(boolean r) {
		hasTeam = r;
	}
	
#11 added the below to the coaches class
private boolean payLeagueFees = false;

	public boolean getPayLeagueFees() {
		return payLeagueFees;
	}
	public void setPayLeagueFees(boolean l) {
		this.payLeagueFees = l;
	}


